# hotlane

./: .gitignore  .goreleaser.yml  README.md  go.mod  go.sum
.github/workflows/: release.yml  test.yml
bench/: bench.sh
bench/workloads/fastapi/: app.py  hotlane.yml
bench/workloads/node-ts/: hotlane.yml  package.json  tsconfig.json
bench/workloads/node-ts/src/: server.ts
cmd/hotlane/: app.go  main.go  mcp.go
docs/: benchmark.md  ci.md  demo.tape  multi-app.md  mvp.md  roadmap.md  traffic-replay.md
example/: hotlane.yml
example/demo-app/: hotlane.yml  server.js
internal/archive/: archive.go  archive_test.go
internal/config/: config.go  config_test.go
internal/detect/: detect.go  detect_test.go
internal/docker/: docker.go  docker_test.go
internal/notify/: notify.go  notify_test.go
internal/pool/: pool.go  pool_test.go
internal/proxy/: proxy.go
internal/replay/: replay.go  replay_test.go
internal/respdiff/: respdiff.go  respdiff_test.go
internal/verify/: verify.go
packaging/cloud-init/: user-data.yml
packaging/crates/: Cargo.toml  README.md
packaging/crates/src/: lib.rs
packaging/npm/: README.md  install.js  package.json
packaging/pypi/: README.md  pyproject.toml
packaging/pypi/src/hotlane/: __init__.py  _cli.py
packaging/systemd/: hotlane.service
site/: docs.html  index.html
test/: e2e.sh
