[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hotlane"
version = "0.0.1"
description = "Validation-first deployment: fork a warm running instance, verify, promote via atomic proxy flip, roll back by pointer. Name reserved while the MVP is built."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Stefan Iancu" }]
requires-python = ">=3.9"
keywords = ["deployment", "ci-cd", "rollback", "warm-deploy", "agentic"]

[project.urls]
Homepage = "https://github.com/StefanIancu/hotlane"
Repository = "https://github.com/StefanIancu/hotlane"

[tool.hatch.build.targets.wheel]
packages = ["src/hotlane"]
