[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hotlane"
version = "0.1.2"
description = "Validation-first deployment: fork a warm running instance, verify, promote via atomic proxy flip, roll back by pointer."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Stefan Iancu" }]
requires-python = ">=3.9"
dependencies = ["certifi"]
keywords = ["deployment", "ci-cd", "rollback", "warm-deploy", "agentic"]

[project.urls]
Homepage = "https://hotlane.dev"
Repository = "https://github.com/StefanIancu/hotlane"

[project.scripts]
hotlane = "hotlane._cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hotlane"]
